syntax = "proto3";

package heartbeat;

service Heartbeat {
  // JoinRequest is used by clients to request to join the network
	rpc JoinRequest(RequestInfo) returns (ClientId) {}

  // Heartbeat is called intermittently to indicate that the respective client
  // is still alive and able to communicate with the the master
	rpc Heartbeat(HeartbeatMessage) returns (HeartbeatResponse) {}
}

// ClientId is a unique integer ID given to a client in response to a JoinRequest
message ClientId {
	int64 id = 1;
	int64 heartbeat_interval = 2;
}

// Heartbeat contains the ID of the client sending the heartbeat along with a
// timestamp indicating when the heatbeat was sent
message HeartbeatMessage {
	int64 id = 1;
	int64 time = 2;
}

// Empty status message. Receipt of a Status message indicates OK.
message HeartbeatResponse {
  int64 token = 1;
}

// RequestInfo is a placeholder for potential future info we may want to include
// with requests
message RequestInfo {
}
